fixed reminder falling underly options on mobile view

--- a/src/components/Chat/ChatModule/LiveChat/MessageBody/Messages/Message/MessageAttachments/MediaContent/MediaDisplay/MediaDisplayLoader/MediaDisplayLoader.scss
+++ b/src/components/Chat/ChatModule/LiveChat/MessageBody/Messages/Message/MessageAttachments/MediaContent/MediaDisplay/MediaDisplayLoader/MediaDisplayLoader.scss
@@ -14,8 +14,9 @@
     @include media("<=medium-screen") {
         min-width: 275px !important;
         height: 200px;
+        width: 100%;
     }
-    
+
     // position: relative;
     // overflow: hidden;
 
